2007-11-29  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po: 
	Spanish 100% again

2007-11-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (TVCardStep.errRemoteRunError): 
	Remove defer_generator_method, add a probing message like the webcam 
	component, clear the combos when a device is not found.
	(TVCardStep): use ProxyWidgetMapping

	* configure.ac: kiwi not found, not kiwi found when kiwi is not found.

	* flumotion/wizard/productionsteps.py 
	(WebcamStep.on_combobox_size_changed): Set the height to the height 
	of the selected size and not the width!
	(WebcamStep._run_checks): Catch RemoteRunError and make it impossible
	to select the device when it does not exist.
	(TestVideoSourceStep, WebcamStep): use ProxyWidgetMapping
	(WebcamStep._run_checks): get_string->get_selected, forgot to merge this
	change from my rejected patch, grr.

2007-11-28  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/admin/gtk/client.py: 
	Pretty print in XML export - fixes #801

2007-11-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/basesteps.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/consumptionsteps.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/worker.py:
	Mark strings visible in the user interface as translatable.
	
	* po/ca.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/nl.po:
	* po/no.po:
	* po/pt_BR.po:
	* po/sv.po:
	Update translation files and update swedish translation.

2007-11-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/combiners/switch/switch.py: Shorten logging
	categories.
	(Switch.logicalFeeds, Switch.create_pipeline)
	(Switch.get_logical_feeds, SingleSwitch.get_logical_feeds)
	(AVSwitch.get_logical_feeds): There are only three important
	numbers in computer science: 0, 1, and N. We have passed one.
	(Switch.addWarning, Switch._create_scheduler, Switch.is_active)